apps/canary-service/overlays/dev/canary-service-httproute.yaml
# En dev el hostname apunta al dominio de apps del cluster de desarrollo.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary-service
spec:
  hostnames:
    - canary-dev.apps.cluster-pvsbw.dyn.redhatworkshops.io
